# verify-service

./: .dockerignore  .gitignore  DecisionRecords.md  Dockerfile  Dockerfile.dev  README.md  Verify-Adr.md  compare_verify_and_gpt_4o.py  gpt-4o-image-analysis.py  gpt4o_analysis_results.csv  main.py  pyproject.toml  requirements.txt  test_verify.py
configs/: env_config.py
image/: reverse_image_search.py  utils.py  websearch.py
image/models/: schema.py
image/routes/: image_analysis.py
image/services/: image_estimation_pipeline_gpu.py  image_estimation_pipeline_nogpu.py
image/services/analysis_modules/: config.py  datamodule.py  datamodule2.py  model.py  utils.py
shared/util/: logging_utils.py
video/: twitter_search.py
