[tool.poetry]
name = "focust-verify"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies (no ML frameworks)
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.6"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
google-auth = "^2.22.0"
google-cloud-vision = "^3.4.4"
google-cloud-logging = "^3.12.1"
opencv-python-headless = "^4.8.1"
scikit-image = "^0.21.0"
albumentations = "^2.0.6"
numpy = "^1.26.4"
scikit-learn = "^1.3.2"
openai = "^1.82.0"

# cpu-only ml group
[tool.poetry.group.ml-cpu.dependencies]
torch = {version = "^2.7.0", source = "pytorch-cpu"}
torchvision = {version = "^0.22.0", source = "pytorch-cpu"}
torchaudio = {version = "^2.7.0", source = "pytorch-cpu"}
tensorflow-cpu = "^2.18.0"
pytorch-lightning = "^2.5.1"
deepface = "^0.0.93"
timm = "^1.0.9"
huggingface-hub = "^0.30.2"

#  gpu-enabled ml group (for local development with GPU)
[tool.poetry.group.ml-gpu.dependencies]
torch = "^2.7.0"
torchvision = "^0.22.0"
torchaudio = "^2.7.0"
tensorflow = "^2.18.0"
pytorch-lightning = "^2.5.1"
deepface = "^0.0.93"
timm = "^1.0.9"
huggingface-hub = "^0.30.2"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
